--- a/task3_index.html
+++ b/task3_index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="wrap">
-        <input type="text" class="input" placeholder="число от 1 до 10..">
+        <input type="number" class="input" placeholder="число от 1 до 10..">
         <input type="button" value="Получить">
         <div class="message"></div>
         <div class="response"></div>
