--- a/task3_index.html
+++ b/task3_index.html
@@ -11,7 +11,7 @@
         <input type="number" class="input" placeholder="число от 1 до 10..">
         <input type="button" value="Получить">
         <div class="message"></div>
-        <div class="response"></div>
+        <div class="picture"></div>
     </div>      
 
 
