--- a/task3_index.html
+++ b/task3_index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="task3_style.css">
     <title>Task-3</title>
 </head>
 <body>
     <div class="wrap">
-        <input type="number" class="input" placeholder="число от 1 до 10..">
-        <input type="button" value="Получить">
-        <div class="message"></div>
+        <form>
+            <input type="number" class="input" placeholder="число от 1 до 10..">
+            <input type="button" value="Получить" disabled ="true">
+            <div class="message"></div>
+        </form>
+        
         <div class="picture"></div>
     </div>      
 
