--- a/task4/index_task4.html
+++ b/task4/index_task4.html
@@ -8,6 +8,16 @@
     <title>Task-4</title>
 </head>
 <body>
+
+    <div class="wrap">
+        <form>
+            <input class="inputupper" type="text">
+            <input class="inputlower" type="text">
+            <input type="button" value="submit" >
+            <span class = "message"></span>
+        </form>
+        <div class="image"></div>
+    </div>
     
     <script src="script_task4.js"></script>
 </body>
