--- a/task5/index_task5.html
+++ b/task5/index_task5.html
@@ -11,8 +11,8 @@
 
     <div class="wrap">
         <form>
-            <input class="inputpages" type="text">
-            <input class="inputlimit" type="text">
+            <input class="inputpages" type="text" placeholder="номер страницы">
+            <input class="inputlimit" type="text" placeholder="лимит">
             <input type="button" value="запрос" >
             <span class = "message"></span>
         </form>
