--- a/task5/index_task5.html
+++ b/task5/index_task5.html
@@ -17,7 +17,7 @@
             <span class = "message"></span>
         </form>
     </div>
-    <div class="image"></div>
+    <div class="container"></div>
     
     <script src="script_task5.js"></script>
 </body>
